--- a/templates/pexeso.html
+++ b/templates/pexeso.html
@@ -5,9 +5,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
 
-<link rel="stylesheet" href="{% static "/static/css/bootstrap.min.css" %}">
-    <link rel="stylesheet" href="{% static "/static/css/bootstrap-theme.min.css" %}">
-    <link rel="stylesheet" href="{% static "/static/css/style.css" %}">
+<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/bootstrap-theme.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
 
 </head>
 
@@ -16,7 +16,7 @@
 {% if pexeso.sound %}
     <script>
                 var audioElement = document.createElement('audio');
-                audioElement.setAttribute('src', '{% static '/static' %}/data/{{ pexeso.pexeso_file }}/{{ pexeso.sound }}');
+                audioElement.setAttribute('src', '{% static 'static' %}/data/{{ pexeso.pexeso_file }}/{{ pexeso.sound }}');
                 audioElement.play();
     </script>
 {% endif %}
