--- a/templates/vysledky.html
+++ b/templates/vysledky.html
@@ -3,9 +3,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
     {% load staticfiles %}
-<link rel="stylesheet" href="{% static "/static/css/bootstrap.min.css" %}">
-    <link rel="stylesheet" href="{% static "/static/css/bootstrap-theme.min.css" %}">
-    <link rel="stylesheet" href="{% static "/static/css/style.css" %}">
+<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/bootstrap-theme.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
 </head>
 
 <body>
